--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "passport-google-oauth": "~0.1.5",
     "passport-instagram": "~0.1.2",
     "passport-local": "~0.1.6",
-    "passport-twitter": "~1.0.2"
+    "passport-twitter": "~1.0.2",
+    "react": "^0.11.1"
   }
 }
