--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "fxf",
   "main": "server.js",
   "dependencies": {
+    "async": "^0.9.0",
     "bcrypt-nodejs": "latest",
     "connect-flash": "~0.1.1",
+    "dropzone": "^3.8.4",
     "ejs": "~0.8.5",
     "express": "~3.4.4",
     "instagram-node-lib": "~0.1.1",
+    "knox": "^0.9.1",
+    "mime": "^1.2.11",
     "moment": "^2.8.1",
     "mongoose": "~3.8.1",
     "node-sass": "^0.9.3",
