--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mime": "^1.2.11",
     "moment": "^2.8.1",
     "mongoose": "~3.8.1",
+    "newrelic": "^1.10.3",
     "node-sass": "^0.9.3",
     "passport": "~0.1.17",
     "passport-facebook": "~1.0.2",
