--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport-instagram": "~0.1.2",
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
-    "react": "^0.11.1"
+    "react": "^0.11.1",
+    "superagent": "^0.18.2"
   }
 }
