--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dropzone": "^3.8.4",
     "ejs": "~0.8.5",
     "express": "~3.4.4",
+    "feed": "^0.2.6",
     "instagram-node-lib": "~0.1.1",
     "knox": "^0.9.1",
     "mime": "^1.2.11",
