--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
     "react": "^0.11.1",
+    "rss": "^0.3.2",
     "superagent": "^0.18.2"
   }
 }
