--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "async": "^0.9.0",
     "bcrypt-nodejs": "latest",
     "connect-flash": "~0.1.1",
+    "connect-redis": "~1.4.7",
     "dropzone": "^3.8.4",
     "ejs": "~0.8.5",
     "express": "~3.4.4",
@@ -23,7 +24,9 @@
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
     "react": "^0.11.1",
+    "redis": "^0.12.1",
     "rss": "^0.3.2",
-    "superagent": "^0.18.2"
+    "superagent": "^0.18.2",
+    "url": "^0.10.1"
   }
 }
