--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-instagram": "~0.1.2",
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
+    "rangy": "^1.3.0-alpha.20140921",
     "react": "^0.11.1",
     "redis": "^0.12.1",
     "rss": "^0.3.2",
