--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~3.4.4",
     "feed": "^0.2.6",
     "instagram-node-lib": "~0.1.1",
+    "jquery": "^2.1.3",
     "knox": "^0.9.1",
     "mime": "^1.2.11",
     "moment": "^2.8.1",
@@ -24,10 +25,16 @@
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
     "rangy": "^1.3.0-alpha.20140921",
-    "react": "^0.11.1",
+    "react": "^0.12.2",
+    "react-textarea-autosize": "^1.0.6",
     "redis": "^0.12.1",
     "rss": "^0.3.2",
     "superagent": "^0.18.2",
     "url": "^0.10.1"
+  },
+  "devDependencies": {
+    "browserify": "^8.1.0",
+    "reactify": "^0.17.1",
+    "vinyl-source-stream": "^1.0.0"
   }
 }
