no name changing and facebook comments and node version for heroku

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "fxf",
   "main": "server.js",
+  "version": "0.1.0",
+  "engines": {
+    "node": "0.10.35"
+  },
   "dependencies": {
     "async": "^0.9.0",
     "bcrypt-nodejs": "latest",
