--- a/package.json
+++ b/package.json
@@ -37,8 +37,14 @@
     "url": "^0.10.1"
   },
   "devDependencies": {
-    "browserify": "^8.1.0",
-    "reactify": "^0.17.1",
-    "vinyl-source-stream": "^1.0.0"
+    "browserify": "^11.2.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^1.4.1",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
