--- a/package.json
+++ b/package.json
@@ -36,14 +36,22 @@
     "url": "^0.10.1"
   },
   "devDependencies": {
-    "browserify": "^11.2.0",
+    "babel-cli": "^6.3.17",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "component-emitter": "^1.1.2",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-jshint": "^1.11.2",
-    "gulp-nodemon": "^2.0.4",
+    "gulp-jshint": "^2.0.0",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-nodemon": "^2.0.6",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.4",
-    "gulp-uglify": "^1.4.1",
+    "gulp-sass": "^2.1.1",
+    "gulp-uglify": "^1.5.1",
+    "jshint": "^2.8.0",
     "reactify": "^1.1.1",
+    "require-globify": "^1.3.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
